--- a/cdssmanager.ui
+++ b/cdssmanager.ui
@@ -93,7 +93,7 @@
      <item>
       <widget class="QPushButton" name="pushButton">
        <property name="text">
-        <string>Close</string>
+        <string>OK</string>
        </property>
       </widget>
      </item>
